add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_own_library)

add_executable(tests tests.cpp)

add_executable(sum-m sum_multiples.cpp)

add_executable(lcm lcm.cpp)

add_executable(mile_to_kilometer mile_to_kilometer.cpp)
add_executable(interactive_mile_to_kilometer interactive_mile_to_kilometer.cpp)
